assets/style.css
@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300&family=Indie+Flower&display=swap');

* {
  /* background-color: cadetblue;  */
  box-sizing: border-box;
}
body, .page-footer {
  background-color: #9cd6f8;
}

#previouslySearched {
     
}
.page-footer {
background-color: linear-gradient(#26a69a);
background: linear-gradient(#26a69a, #9198e5);

}

.nav {
  background-color: linear-gradient(#26a69a);
}
.nav-wrapper {
  background-color: linear-gradient(#26a69a);
  background: linear-gradient(#26a69a, #9198e5);
}
.background img {
     background: url(./images/LyricAllyLogo.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  width: 300px;
  opacity: 30%;
}
.material-icons {
     color: #26a69a;
     font-family: 'Comic Neue', cursive;
     font-size: 25px;
     padding: 5px;
     font-weight: bolder;
     background: -webkit-linear-gradient(#26a69a, #9198e5);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
}

span {
  color: black;
  font-family: 'Comic Neue', cursive;
  font-size: 40px;
  font-weight: bolder;
  padding: 5px;
  background: -webkit-linear-gradient(#26a69a, #9198e5);
  -webkit-background-clip: text;
  -webkit-text-fill-color: black;
}
.card {
     color: #26a69a;
     font-family: 'Comic Neue', cursive;
     font-size: 30px;
     font-weight: bolder;
     background: -webkit-linear-gradient(#26a69a, #9198e5);
     -webkit-background-clip: text;
     -webkit-text-fill-color: black;
}

::placeholder {
  color: black;
  font-family: 'Comic Neue', cursive;
  font-size: 30px;
  font-weight: bolder;
  background: -webkit-linear-gradient(#26a69a, #9198e5);
  -webkit-background-clip: text;
  -webkit-text-fill-color: black;
}
[type="checkbox"] + span:not(.lever) {
  position: relative;
  padding-left: 35px;
  cursor: pointer;
  display: inline-block;
  height: 25px;
  line-height: 20px;
  font-size: 25px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
.row .col {
float: left;
-webkit-box-sizing: border-box;
box-sizing: border-box;
padding: 0 .75rem;
min-height: 1px;
margin-bottom: 0px;

}
#Search {
  border-bottom: 1px solid #9198e5 !important;
}

/* .col12 {
     align-content: center;
} */
.waves-effect {
     
     font-family: 'Comic Neue', cursive;
     font-size: 20px;

}

.logo-Wrapper {
  position: absolute;
  left: 50%;
  right: 50%;
  transform: translate(-50%, -50%);
  width: 125px;
  border-radius: 8px;
}
a.brand-logo {
  width: 120px;
  align-items: center;
  display: flex;
}
.row {
  display: flex;
  justify-content: center;
  width: 90%;
}
img.responsive-img {
  display: flex;
  align-items: center;
  max-width: 100%;
  height: 65px;
  border-radius: 8px;
}
.col.s4 {
  font-family: 'Comic Neue', cursive;
  font-size: 35px;
  background: -webkit-linear-gradient(#26a69a, #9198e5);
  -webkit-background-clip: text;
  -webkit-text-fill-color: black;
}
#searchFiltersForm {
     display: flex!important;
  align-content: center;
  color: black;
}

li.active {
  font-family: 'Comic Neue', cursive;
  font-size: 25px;
  background: -webkit-linear-gradient(#112828, #0419ff);
  -webkit-background-clip: text;
  -webkit-text-fill-color: black;
}


   
   .muzieknootjes {
     display: block;
     margin: auto;
     position: relative;
     width: 50%;
     min-width: 300px;
     height: 200px;
     border: 0px solid #000;
   }
   
   .noot-1,
   .noot-2,
   .noot-3,
   .noot-4 {
     position: absolute;
     animation: notes 2s infinite linear;
     font-size: 35px;
     opacity: 0;
   }
   
   .noot-1 {
     top: 60px;
     left: 0;
     animation-delay: 0.5s;
   }
   
   .noot-2 {
     top: 30px;
     left: 30%;
     animation-delay: 1s;
   }
   
   .noot-3 {
     top: 90px;
     left: 60%;
     animation-delay: 1.5s;
   }
   
   .noot-4 {
     top: 40px;
     left: 90%;
     animation-delay: 2s;
   }
   
   @keyframes notes {
     0% {
       transform: scale(1) translate(0, 0);
       opacity: 0;
     }
     50% {
       opacity: 1;
       transform: scale(1.5) translate(50%, -50%);
     }
     80% {
       opacity: 0;
       transform: scale(1.5) translate(100%, -100%);
     }
     100% {
       transform: scale(1.5) translate(100%, -100%);
       opacity: 0;
     }
   }
   

@media screen {
  /* need at 800px and 400px */
}

